# quali-backend

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  ENHANCEMENTS.md  FRONTEND.md  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
app/: __init__.py  main.py
app/clients/: __init__.py
app/core/: __init__.py
app/domains/: __init__.py
app/shared/: __init__.py
docs/architecture/: conventions.md  vision.md
docs/business/: big_picture.md  overview.md
migrations/: env.py
migrations/versions/: 0001_create_shared_tables.py  0002_create_users_table.py  0003_create_companies_tables.py  0004_create_certificates_table.py  0005_create_courses_tables.py  0006_create_enrollments_table.py  0007_create_assessments_tables.py  0008_create_access_codes_table.py  0009_create_training_plans_tables.py  0010_create_legal_acceptances_table.py  1c5b116ded15_add_slug_to_courses.py  7b9fe59be1a4_add_unique_constraint_user_course_on_.py  8421642c0b49_add_is_superadmin_to_users.py  b17ef02b7985_consolidate_enrollment_with_course_.py  b9c388c1420a_move_passing_score_max_attempts_to_.py  ecd75ab8397e_remove_company_id_add_enrollment_id_to_.py
scripts/: seed_activities.py  seed_course.py  seed_full_course.py  seed_local_manipulacion.py  seed_m1_el_enemigo_invisible.py
scripts/data/: seed_manipulacion_modules.json  seed_manipulacion_questions.json
tests/: conftest.py
tests/companies/: conftest.py
tests/integration/: conftest.py  test_certificate_repository.py  test_company_repository.py  test_user_repository.py
tests/users/: __init__.py  (+1 more)
(+678 files in other folders)
